@@ -1,0 +1,23 @@
+Truncated pattern
+OpenMPT 1.31.15.00 XM 1.04
+2 5 4 1 1 6 125 1 0 64
+0
+64 1 512 
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+64 64 128 0 0 0 0 0 0 0 0 0 0 0 0 0
+64 0 1 2 3
+64 4 4 4 4
+64 82b8104b1c7e68cc86255d5f0e7fee1f
+64 bf619eac0cdf3f68d496ea9344137e8b
+64 bf619eac0cdf3f68d496ea9344137e8b
+64 58d5d73d63e9a5d3e2921c7d8ecd6a7c
+64 bf619eac0cdf3f68d496ea9344137e8b
+32 0 32 2 6692110619ca175591462788549dab0f 
+128 64 0
+128 64 0
+128 64 0
+128 64 0
